fix spacing issue

--- a/packages/global/scss/index.scss
+++ b/packages/global/scss/index.scss
@@ -275,8 +275,10 @@ $theme-site-header-breakpoints: map-merge(
 }
 
 .page-contents {
-  .primary-image,
-  .images .image {
+  &__images {
+    margin-top: map-get($spacers, block);;
+  }
+  .primary-image {
     border-bottom: 1px solid rgba(0, 0, 0, .25);
     margin-bottom: $theme-primary-media-margin-bottom;
     &__image-caption {
